--- a/classification_testing/Pipeline_test_1.ipynb
+++ b/classification_testing/Pipeline_test_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7a4a051d-35f4-40f2-b791-216e3117432b",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,9 @@
     "#sys.path.append(\"/home/markdj/repos/Polesia-Landcover/data_stack_testing/\")\n",
     "sys.path.append(\"C:/Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing/\")\n",
     "import ee\n",
-    "import seaborn as sns\n",
+    "import os\n",
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
     "from geemap import geemap\n",
     "from data_stack_tools_v1 import create_data_stack, map_topography\n",
     "ee.Initialize()"
@@ -19,17 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e170b9be-402d-4d1e-89bb-118b12a5879d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths and variable settings\n",
     "#fp_train_ext = \"/home/markdj/Dropbox/artio/polesia/val/Vegetation_extent_rough.shp\"\n",
-    "fp_train_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Project_area.shp\"\n",
-    "fp_train_points = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Training_data/Training_points_500.shp\"\n",
-    "label = 'VALUE'\n",
-    "scale = 1000\n",
+    "fp_train_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Project_area.shp\" # Area covered by the training data\n",
+    "fp_train_points = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Training_data/Training_points_500.shp\" # Prepped training points\n",
+    "fp_target_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Classif_area.shp\" # Area to be classified\n",
+    "fp_export_dir = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Classified/\"\n",
+    "\n",
+    "label = 'VALUE' # Name of the classes column in your trainig data\n",
+    "scale = 20 # Sets the output scale of the analysis\n",
     "\n",
     "aoi = geemap.shp_to_ee(fp_train_ext)\n",
     "start_date_list = ['2018-01-01', '2018-02-01', \n",
@@ -37,7 +42,7 @@
     "                   '2018-05-01', '2018-06-01', \n",
     "                   '2018-07-01', '2018-08-01',\n",
     "                   '2018-09-01', '2018-10-01',\n",
-    "                   '2018-11-01', '2018-12-01']\n",
+    "                   '2018-11-01', '2018-12-01'] # Set the year on which to train the classifier\n",
     "\n",
     "s2_params = {\n",
     "    'CLOUD_FILTER': 60,       # int, max cloud coverage (%) permitted in a scene\n",
@@ -50,10 +55,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "41204f61-3e2b-429a-b512-8a17ace5332f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch_sentinel1(): hello!\n",
+      "fetch_sentinel1(): processing month 2018-01-01\n",
+      "fetch_sentinel1(): processing month 2018-02-01\n",
+      "fetch_sentinel1(): processing month 2018-03-01\n",
+      "fetch_sentinel1(): processing month 2018-04-01\n",
+      "fetch_sentinel1(): processing month 2018-05-01\n",
+      "fetch_sentinel1(): processing month 2018-06-01\n",
+      "fetch_sentinel1(): processing month 2018-07-01\n",
+      "fetch_sentinel1(): processing month 2018-08-01\n",
+      "fetch_sentinel1(): processing month 2018-09-01\n",
+      "fetch_sentinel1(): processing month 2018-10-01\n",
+      "fetch_sentinel1(): processing month 2018-11-01\n",
+      "fetch_sentinel1(): processing month 2018-12-01\n",
+      "fetch_sentinel1(): bye!\n",
+      "fetch_sentinel2(): hello!\n",
+      "fetch_sentinel2(): processing month 2018-01-01\n",
+      "fetch_sentinel2(): processing month 2018-02-01\n",
+      "fetch_sentinel2(): processing month 2018-03-01\n",
+      "fetch_sentinel2(): processing month 2018-04-01\n",
+      "fetch_sentinel2(): processing month 2018-05-01\n",
+      "fetch_sentinel2(): processing month 2018-06-01\n",
+      "fetch_sentinel2(): processing month 2018-07-01\n",
+      "fetch_sentinel2(): processing month 2018-08-01\n",
+      "fetch_sentinel2(): processing month 2018-09-01\n",
+      "fetch_sentinel2(): processing month 2018-10-01\n",
+      "fetch_sentinel2(): processing month 2018-11-01\n",
+      "fetch_sentinel2(): processing month 2018-12-01\n",
+      "fetch_sentinel2(): bye!\n",
+      "fetch_topography(): hi!\n",
+      "fetch_topography(): bye!\n",
+      "Training bands are: ['S1_VV_2018-01', 'S1_VH_2018-01', 'S1_VV_2018-02', 'S1_VH_2018-02', 'S1_VV_2018-03', 'S1_VH_2018-03', 'S1_VV_2018-04', 'S1_VH_2018-04', 'S1_VV_2018-05', 'S1_VH_2018-05', 'S1_VV_2018-06', 'S1_VH_2018-06', 'S1_VV_2018-07', 'S1_VH_2018-07', 'S1_VV_2018-08', 'S1_VH_2018-08', 'S1_VV_2018-09', 'S1_VH_2018-09', 'S1_VV_2018-10', 'S1_VH_2018-10', 'S1_VV_2018-11', 'S1_VH_2018-11', 'S1_VV_2018-12', 'S1_VH_2018-12', 'S2_B2_2018-01', 'S2_B3_2018-01', 'S2_B4_2018-01', 'S2_B5_2018-01', 'S2_B6_2018-01', 'S2_B7_2018-01', 'S2_B8_2018-01', 'S2_B8A_2018-01', 'S2_B11_2018-01', 'S2_B12_2018-01', 'S2_B2_2018-02', 'S2_B3_2018-02', 'S2_B4_2018-02', 'S2_B5_2018-02', 'S2_B6_2018-02', 'S2_B7_2018-02', 'S2_B8_2018-02', 'S2_B8A_2018-02', 'S2_B11_2018-02', 'S2_B12_2018-02', 'S2_B2_2018-03', 'S2_B3_2018-03', 'S2_B4_2018-03', 'S2_B5_2018-03', 'S2_B6_2018-03', 'S2_B7_2018-03', 'S2_B8_2018-03', 'S2_B8A_2018-03', 'S2_B11_2018-03', 'S2_B12_2018-03', 'S2_B2_2018-04', 'S2_B3_2018-04', 'S2_B4_2018-04', 'S2_B5_2018-04', 'S2_B6_2018-04', 'S2_B7_2018-04', 'S2_B8_2018-04', 'S2_B8A_2018-04', 'S2_B11_2018-04', 'S2_B12_2018-04', 'S2_B2_2018-05', 'S2_B3_2018-05', 'S2_B4_2018-05', 'S2_B5_2018-05', 'S2_B6_2018-05', 'S2_B7_2018-05', 'S2_B8_2018-05', 'S2_B8A_2018-05', 'S2_B11_2018-05', 'S2_B12_2018-05', 'S2_B2_2018-06', 'S2_B3_2018-06', 'S2_B4_2018-06', 'S2_B5_2018-06', 'S2_B6_2018-06', 'S2_B7_2018-06', 'S2_B8_2018-06', 'S2_B8A_2018-06', 'S2_B11_2018-06', 'S2_B12_2018-06', 'S2_B2_2018-07', 'S2_B3_2018-07', 'S2_B4_2018-07', 'S2_B5_2018-07', 'S2_B6_2018-07', 'S2_B7_2018-07', 'S2_B8_2018-07', 'S2_B8A_2018-07', 'S2_B11_2018-07', 'S2_B12_2018-07', 'S2_B2_2018-08', 'S2_B3_2018-08', 'S2_B4_2018-08', 'S2_B5_2018-08', 'S2_B6_2018-08', 'S2_B7_2018-08', 'S2_B8_2018-08', 'S2_B8A_2018-08', 'S2_B11_2018-08', 'S2_B12_2018-08', 'S2_B2_2018-09', 'S2_B3_2018-09', 'S2_B4_2018-09', 'S2_B5_2018-09', 'S2_B6_2018-09', 'S2_B7_2018-09', 'S2_B8_2018-09', 'S2_B8A_2018-09', 'S2_B11_2018-09', 'S2_B12_2018-09', 'S2_B2_2018-10', 'S2_B3_2018-10', 'S2_B4_2018-10', 'S2_B5_2018-10', 'S2_B6_2018-10', 'S2_B7_2018-10', 'S2_B8_2018-10', 'S2_B8A_2018-10', 'S2_B11_2018-10', 'S2_B12_2018-10', 'S2_B2_2018-11', 'S2_B3_2018-11', 'S2_B4_2018-11', 'S2_B5_2018-11', 'S2_B6_2018-11', 'S2_B7_2018-11', 'S2_B8_2018-11', 'S2_B8A_2018-11', 'S2_B11_2018-11', 'S2_B12_2018-11', 'S2_B2_2018-12', 'S2_B3_2018-12', 'S2_B4_2018-12', 'S2_B5_2018-12', 'S2_B6_2018-12', 'S2_B7_2018-12', 'S2_B8_2018-12', 'S2_B8A_2018-12', 'S2_B11_2018-12', 'S2_B12_2018-12', 'elevation', 'slope', 'aspect', 'topographic_diversity']\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data stack\n",
     "stack = create_data_stack(aoi, start_date_list, s2_params)\n",
@@ -65,53 +108,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2d4db315-1f6a-46d0-9f8a-042900881456",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading training data...\n",
+      "Training data loaded and ready!\n"
+     ]
+    }
+   ],
    "source": [
     "# Load and sample the training data\n",
     "print('Loading training data...')\n",
+    "trainingbands_sample = [trainingbands[i] for i in [1,10,18,19]] # Temporary selection of random bands to allow pipeline testing\n",
+    "\n",
     "training_points = geemap.shp_to_ee(fp_train_points)\n",
+    "data = stack.select(trainingbands_sample).sampleRegions(collection=training_points,\n",
+    "                                                        properties=[label],\n",
+    "                                                        scale=scale)\n",
     "\n",
-    "data = stack.select(trainingbands).sampleRegions(collection=training_points,\n",
-    "                                                 properties=label,\n",
-    "                                                 scale=scale)\n",
-    "\n",
-    "# Remove null value samples\n",
-    "dataNoNulls = data.filter(ee.Filter.notNull(data.first().propertyNames()))\n",
+    "# Remove null value samples (if needed, switch all the 'data' to dataNoNulls' below)\n",
+    "#dataNoNulls = data.filter(ee.Filter.notNull(data.first().propertyNames()))\n",
     "\n",
     "# Split into train and test\n",
     "split = 0.7\n",
-    "dataNoNulls = dataNoNulls.randomColumn(seed=0)\n",
-    "train = dataNoNulls.filter(ee.Filter.lt('random',split))\n",
-    "test = dataNoNulls.filter(ee.Filter.gte('random',split))\n",
+    "data = data.randomColumn(seed=0)\n",
+    "train = data.filter(ee.Filter.lt('random',split))\n",
+    "test = data.filter(ee.Filter.gte('random',split))\n",
     "\n",
-    "# Set up the classifier\n",
-    "init_params = {\"numberOfTrees\":100, # the number of individual decision tree models\n",
-    "              \"variablesPerSplit\":None,  # the number of features to use per split\n",
-    "              \"minLeafPopulation\":1, # smallest sample size possible per leaf\n",
-    "              \"bagFraction\":0.5, # fraction of data to include for each individual tree model\n",
-    "              \"maxNodes\":None, # max number of leafs/nodes per tree\n",
-    "               \"seed\":0}  # random seed for \"random\" choices like sampling.\n",
-    "\n",
-    "clf = ee.Classifier.smileRandomForest(**init_params).train(train, label, trainingbands)\n",
-    "print('Training data loaded and classifier ready!')"
+    "print('Training data loaded and ready!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd35a0bc-e3fb-407e-ab95-3483a881999b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test performance of random forest classifier\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "085674cb-a141-4e57-8b09-996abe80ee97",
    "metadata": {},
    "outputs": [
@@ -119,28 +153,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random forest to classify region...\n"
+      "Setting up random forest classifier...\n",
+      "Using random forest to classify region...\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/5a6614c5399b874d2e7bfe721ddff4da-8cb1e25c8f4f74de4769c1e56f056ebe:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to D:\\tpfdo\\Documents\\Artio_drive\\Projects\\Polesia\\Classified\\Random_forest.tif\n",
+      "Classification complete!\n"
      ]
     }
    ],
    "source": [
-    "# Use random forest to classify the rest of the stack\n",
-    "print('Using random forest to classify region...')\n",
-    "classified = stack.select(trainingbands).classify(clf)\n",
+    "# Set up the Random Forest\n",
+    "print('Setting up random forest classifier...')\n",
+    "init_params = {\"numberOfTrees\":100, # the number of individual decision tree models\n",
+    "              \"variablesPerSplit\":None,  # the number of features to use per split\n",
+    "              \"minLeafPopulation\":1, # smallest sample size possible per leaf\n",
+    "              \"bagFraction\":0.5, # fraction of data to include for each individual tree model\n",
+    "              \"maxNodes\":None, # max number of leafs/nodes per tree\n",
+    "               \"seed\":0}  # random seed for \"random\" choices like sampling.\n",
     "\n",
-    "# Display classification\n",
-    "Map = geemap.Map(center=(52, 28), zoom=8)\n",
-    "Map.addLayer(classified.randomVisualizer(), {}, 'Classified')\n",
-    "Map"
+    "clf = ee.Classifier.smileRandomForest(**init_params).train(train, label, trainingbands_sample)\n",
+    "\n",
+    "# Carry out the Random Forest\n",
+    "print('Using random forest to classify region...')\n",
+    "target_area = geemap.shp_to_ee(fp_target_ext)\n",
+    "target_stack = stack.clip(target_area)\n",
+    "classified = stack.select(trainingbands_sample).classify(clf)\n",
+    "\n",
+    "# Export results to local\n",
+    "file_out = fp_export_dir+'Random_forest.tif'\n",
+    "roi = target_area.geometry()\n",
+    "geemap.ee_export_image(classified, filename=file_out, scale=scale, file_per_band=False, region=roi)\n",
+    "\n",
+    "print('Classification complete!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a180c84a-8a76-4748-a223-53fdac6a9b74",
+   "id": "a288d87a-683b-4683-86ad-387c77f9126b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating performance reports...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate performance reports\n",
+    "print('Generating performance reports...')\n",
+    "training_csv = os.path.join(fp_export_dir, 'RF_train_confusion_matrix.csv')\n",
+    "testing_csv = os.path.join(fp_export_dir, 'RF_test_error_matrix.csv')\n",
+    "\n",
+    "train_accuracy = clf.confusionMatrix()\n",
+    "\n",
+    "validated = test.classify(clf)\n",
+    "test_accuracy = validated.errorMatrix('Landcover', 'Classification')\n",
+    "\n",
+    "with open(training_csv, \"w\", newline=\"\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(train_accuracy.getInfo())\n",
+    "    \n",
+    "with open(testing_csv, \"w\", newline=\"\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(test_accuracy.getInfo())\n",
+    "    \n",
+    "print('Performance reports completed!')"
+   ]
   }
  ],
  "metadata": {
