--- a/classification_testing/Pipeline_test_1.ipynb
+++ b/classification_testing/Pipeline_test_1.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a288d87a-683b-4683-86ad-387c77f9126b",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating performance reports...\n"
+      "Generating performance reports...\n",
+      "Performance reports completed!\n"
      ]
     }
    ],
