--- a/data_stack_testing/00_test_data_stack_tools.ipynb
+++ b/data_stack_testing/00_test_data_stack_tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,12 +1496,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28d8f73fc3a44df2a86bd354bd3705b3",
+       "model_id": "a263914c84b948a795803db8b1c378dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1528,6 +1530,37 @@
     "Map.addLayer(stack, vis, f'S2_B12_2019-04')\n",
     "vis = {'min': -50,'max': 1, 'bands': [f'S1_VV_2019-04', f'S1_VH_2019-04', f'S1_VH_2019-04']}\n",
     "Map.addLayer(stack, vis, f'S1_VV_VH_2019-04')\n",
+    "Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e1c32bc19eb4276b1be17287663df04",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lat=51.85\n",
+    "lon=27.8\n",
+    "Map = geemap.Map(center=(lat, lon), zoom=9)\n",
+    "Map.add_basemap('SATELLITE')\n",
+    "vis = {'min': -0.0,'max': 3000,'bands': [f'S2_B4_2019-01', f'S2_B3_2019-01', f'S2_B2_2019-01']}\n",
+    "Map.addLayer(stack, vis, f'S2_rgb_2019-01')\n",
+    "\n",
     "Map"
    ]
   },
