--- a/data_stack_testing/00_test_data_stack_tools.ipynb
+++ b/data_stack_testing/00_test_data_stack_tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "sys.path.append(\"C:/Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing/\")\n",
     "import ee\n",
     "from geemap import geemap\n",
-    "from data_stack_tools_v1 import create_data_stack, map_topography\n",
+    "from data_stack_tools_v1 import create_data_stack, create_data_stack_v2, fetch_sentinel1_v2, fetch_sentinel2_v2, map_topography\n",
     "ee.Initialize()"
    ]
   },
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fp_train_ext = \"/home/markdj/Dropbox/artio/polesia/val/Vegetation_extent_rough.shp\"\n",
-    "fp_train_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Project_area.shp\"\n",
+    "fp_train_ext = \"/home/markdj/Dropbox/artio/polesia/val/Vegetation_extent_rough.shp\"\n",
+    "#fp_train_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Project_area.shp\"\n",
     "\n",
     "aoi = geemap.shp_to_ee(fp_train_ext)\n",
     "start_date_list = ['2019-01-01', '2019-02-01', \n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1479,13 +1481,122 @@
    "source": [
     "map_topography(stack)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test V2 fetch functions\n",
+    "* have to prescribe the start and end dates as below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# date_list replaces 'start_date_list'\n",
+    "date_list = [('2018-12-01', '2019-02-01'),('2019-05-01', '2019-05-31')]\n",
+    "date_list = [('2017-12-01', '2018-02-01')]  # this just generates a ~2 month composite\n",
+    "\n",
+    "\n",
+    "# ** note there is now a new S2BANDS entry here **\n",
+    "\n",
+    "s2_params = {\n",
+    "    'CLOUD_FILTER': 60,       # int, max cloud coverage (%) permitted in a scene\n",
+    "    'CLD_PRB_THRESH': 40,     # int, 's2cloudless' 'probability' band value > thresh = cloud\n",
+    "    'NIR_DRK_THRESH': 0.15,   # float, if Band 8 (NIR) < NIR_DRK_THRESH = possible shadow\n",
+    "    'CLD_PRJ_DIST': 1,        # int, max distnce [TODO: km or 100m?] from cloud edge for possible shadow \n",
+    "    'BUFFER': 100,             # int, distance (m) used to buffer cloud edges\n",
+    "    #'S2BANDS': ['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B8A', 'B11', 'B12'] #list of str, which S2 bands to return?\n",
+    "    'S2BANDS': ['B2', 'B3', 'B4', 'B6', 'B8', 'B11'] #list of str, which S2 bands to return?\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch_sentinel1(): hello!\n",
+      "fetch_sentinel1(): processing period: 2017-12-01 to 2018-02-01\n",
+      "fetch_sentinel1(): bye!\n",
+      "fetch_sentinel2(): hello!\n",
+      "fetch_sentinel2(): processing period: 2017-12-01 to 2018-02-01\n",
+      "fetch_sentinel2(): bye!\n",
+      "fetch_topography(): hi!\n",
+      "fetch_topography(): bye!\n",
+      "fetch_sentinel2(): hello!\n",
+      "fetch_sentinel2(): processing period: 2017-12-01 to 2018-02-01\n",
+      "fetch_sentinel2(): bye!\n",
+      "fetch_sentinel1(): hello!\n",
+      "fetch_sentinel1(): processing period: 2017-12-01 to 2018-02-01\n",
+      "fetch_sentinel1(): bye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the combined datastack in 1 line\n",
+    "stack = create_data_stack_v2(aoi, date_list, s2_params)\n",
+    "\n",
+    "# or call the underlying S1 and S2 functions...\n",
+    "s2tmp = fetch_sentinel2_v2(aoi, date_list, s2_params)\n",
+    "s1tmp = fetch_sentinel1_v2(aoi, date_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "490808d5d673443ab60839a67a621b18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# of course, now i have changed band naming so the mapping functions are screwed.\n",
+    "# quick check..\n",
+    "# WTF is the weird striping in the S1 data? data gap?\n",
+    "\n",
+    "#note: calling get.info() on everything is very useful!\n",
+    "s1bands = s1tmp.bandNames().getInfo()\n",
+    "s2bands = s2tmp.bandNames().getInfo()\n",
+    "#print(s2bands)\n",
+    "\n",
+    "lat=51.85\n",
+    "lon=27.8\n",
+    "Map = geemap.Map(center=(lat, lon), zoom=9)\n",
+    "Map.add_basemap('SATELLITE')\n",
+    "\n",
+    "vis = {'min': -50,'max': 1, 'bands': [s1bands[0],s1bands[1],s1bands[1]]}\n",
+    "Map.addLayer(s1tmp, vis, f'S1')\n",
+    "vis = {'min': -1,'max': 3000, 'bands': [s2bands[2],s2bands[1],s2bands[0]]}\n",
+    "Map.addLayer(s2tmp, vis, f'S2')\n",
+    "Map"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (GitHub)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-b7d07a0a"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1497,7 +1608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
