--- a/classification_testing/Pipeline_test_1.ipynb
+++ b/classification_testing/Pipeline_test_1.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "7a4a051d-35f4-40f2-b791-216e3117432b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'create_data_stack_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5460/3599474403.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgeemap\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgeemap\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_stack_tools_v1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcreate_data_stack_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_sentinel1_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_sentinel2_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_topography\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mInitialize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'create_data_stack_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "#sys.path.append(\"/home/markdj/repos/Polesia-Landcover/data_stack_testing/\")\n",
@@ -15,7 +27,7 @@
     "import csv\n",
     "import matplotlib.pyplot as plt\n",
     "from geemap import geemap\n",
-    "from data_stack_tools_v1 import create_data_stack, map_topography\n",
+    "from data_stack_tools_v1 import create_data_stack_v2, fetch_sentinel1_v2, fetch_sentinel2_v2, map_topography\n",
     "ee.Initialize()"
    ]
   },
@@ -29,7 +41,7 @@
     "# Paths and variable settings\n",
     "#fp_train_ext = \"/home/markdj/Dropbox/artio/polesia/val/Vegetation_extent_rough.shp\"\n",
     "fp_train_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Project_area.shp\" # Area covered by the training data\n",
-    "fp_train_points = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Training_data/Training_points_500.shp\" # Prepped training points\n",
+    "fp_train_points = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Training_data/Complex_points_500.shp\" # Prepped training points\n",
     "fp_target_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Classif_area.shp\" # Area to be classified\n",
     "fp_export_dir = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Classified/\"\n",
     "\n",
@@ -37,20 +49,18 @@
     "scale = 20 # Sets the output scale of the analysis\n",
     "\n",
     "aoi = geemap.shp_to_ee(fp_train_ext)\n",
-    "start_date_list = ['2018-01-01', '2018-02-01', \n",
-    "                   '2018-03-01', '2018-04-01', \n",
-    "                   '2018-05-01', '2018-06-01', \n",
-    "                   '2018-07-01', '2018-08-01',\n",
-    "                   '2018-09-01', '2018-10-01',\n",
-    "                   '2018-11-01', '2018-12-01'] # Set the year on which to train the classifier\n",
+    "date_list = [('2018-12-01', '2019-02-01'),('2019-05-01', '2019-05-31')]\n",
+    "date_list = [('2017-12-01', '2018-02-01')]  # this just generates a ~2 month composite\n",
     "\n",
     "s2_params = {\n",
     "    'CLOUD_FILTER': 60,       # int, max cloud coverage (%) permitted in a scene\n",
     "    'CLD_PRB_THRESH': 40,     # int, 's2cloudless' 'probability' band value > thresh = cloud\n",
     "    'NIR_DRK_THRESH': 0.15,   # float, if Band 8 (NIR) < NIR_DRK_THRESH = possible shadow\n",
     "    'CLD_PRJ_DIST': 1,        # int, max distnce [TODO: km or 100m?] from cloud edge for possible shadow \n",
-    "    'BUFFER': 100             # int, distance (m) used to buffer cloud edges\n",
-    "}"
+    "    'BUFFER': 100,             # int, distance (m) used to buffer cloud edges\n",
+    "    #'S2BANDS': ['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B8A', 'B11', 'B12'] #list of str, which S2 bands to return?\n",
+    "    'S2BANDS': ['B2', 'B3', 'B4', 'B6', 'B8', 'B11'] #list of str, which S2 bands to return?\n",
+    "}\n"
    ]
   },
   {
@@ -99,7 +109,7 @@
    ],
    "source": [
     "# Load the data stack\n",
-    "stack = create_data_stack(aoi, start_date_list, s2_params)\n",
+    "stack = create_data_stack_v2(aoi, date_list, s2_params)\n",
     "\n",
     "band_names = stack.bandNames()\n",
     "trainingbands = band_names.getInfo()\n",
