--- a/classification_testing/Pipeline_test_1.ipynb
+++ b/classification_testing/Pipeline_test_1.ipynb
@@ -2,32 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "7a4a051d-35f4-40f2-b791-216e3117432b",
    "metadata": {},
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'create_data_stack_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)",
+     "evalue": "cannot import name 'fetch_sentinel1_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5460/3599474403.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgeemap\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgeemap\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_stack_tools_v1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcreate_data_stack_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_sentinel1_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_sentinel2_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_topography\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mInitialize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'create_data_stack_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)"
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5460/383894258.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgeemap\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgeemap\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_stack_tools_v1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfetch_sentinel1_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_sentinel2_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_topography\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_data_stack_v2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mInitialize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'fetch_sentinel1_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "#sys.path.append(\"/home/markdj/repos/Polesia-Landcover/data_stack_testing/\")\n",
-    "sys.path.append(\"C:/Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing/\")\n",
+    "sys.path.append(\"C:/Users/tpfdo/OneDrive/Documents/GitHub\\Polesia-Landcover/data_stack_testing/\")\n",
     "import ee\n",
     "import os\n",
     "import csv\n",
     "import matplotlib.pyplot as plt\n",
     "from geemap import geemap\n",
-    "from data_stack_tools_v1 import create_data_stack_v2, fetch_sentinel1_v2, fetch_sentinel2_v2, map_topography\n",
+    "from data_stack_tools_v1 import fetch_sentinel1_v2, fetch_sentinel2_v2, map_topography, create_data_stack_v2\n",
     "ee.Initialize()"
    ]
   },
