--- a/classification_testing/Pipeline_test_1.ipynb
+++ b/classification_testing/Pipeline_test_1.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7a4a051d-35f4-40f2-b791-216e3117432b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'fetch_sentinel1_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5460/383894258.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgeemap\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgeemap\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_stack_tools_v1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfetch_sentinel1_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_sentinel2_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_topography\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_data_stack_v2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mInitialize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'fetch_sentinel1_v2' from 'data_stack_tools_v1' (C:\\Users/tpfdo/OneDrive/Documents/GitHub/Polesia-Landcover/data_stack_testing\\data_stack_tools_v1.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "#sys.path.append(\"/home/markdj/repos/Polesia-Landcover/data_stack_testing/\")\n",
@@ -33,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e170b9be-402d-4d1e-89bb-118b12a5879d",
    "metadata": {},
    "outputs": [],
@@ -41,7 +29,7 @@
     "# Paths and variable settings\n",
     "#fp_train_ext = \"/home/markdj/Dropbox/artio/polesia/val/Vegetation_extent_rough.shp\"\n",
     "fp_train_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Project_area.shp\" # Area covered by the training data\n",
-    "fp_train_points = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Training_data/Complex_points_500.shp\" # Prepped training points\n",
+    "fp_train_points = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Training_data/Simple_points_500.shp\" # Prepped training points\n",
     "fp_target_ext = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Classif_area.shp\" # Area to be classified\n",
     "fp_export_dir = \"D:/tpfdo/Documents/Artio_drive/Projects/Polesia/Classified/\"\n",
     "\n",
@@ -50,7 +38,7 @@
     "\n",
     "aoi = geemap.shp_to_ee(fp_train_ext)\n",
     "date_list = [('2018-12-01', '2019-02-01'),('2019-05-01', '2019-05-31')]\n",
-    "date_list = [('2017-12-01', '2018-02-01')]  # this just generates a ~2 month composite\n",
+    "#date_list = [('2017-12-01', '2018-02-01')]  # this just generates a ~2 month composite\n",
     "\n",
     "s2_params = {\n",
     "    'CLOUD_FILTER': 60,       # int, max cloud coverage (%) permitted in a scene\n",
@@ -60,53 +48,15 @@
     "    'BUFFER': 100,             # int, distance (m) used to buffer cloud edges\n",
     "    #'S2BANDS': ['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B8A', 'B11', 'B12'] #list of str, which S2 bands to return?\n",
     "    'S2BANDS': ['B2', 'B3', 'B4', 'B6', 'B8', 'B11'] #list of str, which S2 bands to return?\n",
-    "}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "41204f61-3e2b-429a-b512-8a17ace5332f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fetch_sentinel1(): hello!\n",
-      "fetch_sentinel1(): processing month 2018-01-01\n",
-      "fetch_sentinel1(): processing month 2018-02-01\n",
-      "fetch_sentinel1(): processing month 2018-03-01\n",
-      "fetch_sentinel1(): processing month 2018-04-01\n",
-      "fetch_sentinel1(): processing month 2018-05-01\n",
-      "fetch_sentinel1(): processing month 2018-06-01\n",
-      "fetch_sentinel1(): processing month 2018-07-01\n",
-      "fetch_sentinel1(): processing month 2018-08-01\n",
-      "fetch_sentinel1(): processing month 2018-09-01\n",
-      "fetch_sentinel1(): processing month 2018-10-01\n",
-      "fetch_sentinel1(): processing month 2018-11-01\n",
-      "fetch_sentinel1(): processing month 2018-12-01\n",
-      "fetch_sentinel1(): bye!\n",
-      "fetch_sentinel2(): hello!\n",
-      "fetch_sentinel2(): processing month 2018-01-01\n",
-      "fetch_sentinel2(): processing month 2018-02-01\n",
-      "fetch_sentinel2(): processing month 2018-03-01\n",
-      "fetch_sentinel2(): processing month 2018-04-01\n",
-      "fetch_sentinel2(): processing month 2018-05-01\n",
-      "fetch_sentinel2(): processing month 2018-06-01\n",
-      "fetch_sentinel2(): processing month 2018-07-01\n",
-      "fetch_sentinel2(): processing month 2018-08-01\n",
-      "fetch_sentinel2(): processing month 2018-09-01\n",
-      "fetch_sentinel2(): processing month 2018-10-01\n",
-      "fetch_sentinel2(): processing month 2018-11-01\n",
-      "fetch_sentinel2(): processing month 2018-12-01\n",
-      "fetch_sentinel2(): bye!\n",
-      "fetch_topography(): hi!\n",
-      "fetch_topography(): bye!\n",
-      "Training bands are: ['S1_VV_2018-01', 'S1_VH_2018-01', 'S1_VV_2018-02', 'S1_VH_2018-02', 'S1_VV_2018-03', 'S1_VH_2018-03', 'S1_VV_2018-04', 'S1_VH_2018-04', 'S1_VV_2018-05', 'S1_VH_2018-05', 'S1_VV_2018-06', 'S1_VH_2018-06', 'S1_VV_2018-07', 'S1_VH_2018-07', 'S1_VV_2018-08', 'S1_VH_2018-08', 'S1_VV_2018-09', 'S1_VH_2018-09', 'S1_VV_2018-10', 'S1_VH_2018-10', 'S1_VV_2018-11', 'S1_VH_2018-11', 'S1_VV_2018-12', 'S1_VH_2018-12', 'S2_B2_2018-01', 'S2_B3_2018-01', 'S2_B4_2018-01', 'S2_B5_2018-01', 'S2_B6_2018-01', 'S2_B7_2018-01', 'S2_B8_2018-01', 'S2_B8A_2018-01', 'S2_B11_2018-01', 'S2_B12_2018-01', 'S2_B2_2018-02', 'S2_B3_2018-02', 'S2_B4_2018-02', 'S2_B5_2018-02', 'S2_B6_2018-02', 'S2_B7_2018-02', 'S2_B8_2018-02', 'S2_B8A_2018-02', 'S2_B11_2018-02', 'S2_B12_2018-02', 'S2_B2_2018-03', 'S2_B3_2018-03', 'S2_B4_2018-03', 'S2_B5_2018-03', 'S2_B6_2018-03', 'S2_B7_2018-03', 'S2_B8_2018-03', 'S2_B8A_2018-03', 'S2_B11_2018-03', 'S2_B12_2018-03', 'S2_B2_2018-04', 'S2_B3_2018-04', 'S2_B4_2018-04', 'S2_B5_2018-04', 'S2_B6_2018-04', 'S2_B7_2018-04', 'S2_B8_2018-04', 'S2_B8A_2018-04', 'S2_B11_2018-04', 'S2_B12_2018-04', 'S2_B2_2018-05', 'S2_B3_2018-05', 'S2_B4_2018-05', 'S2_B5_2018-05', 'S2_B6_2018-05', 'S2_B7_2018-05', 'S2_B8_2018-05', 'S2_B8A_2018-05', 'S2_B11_2018-05', 'S2_B12_2018-05', 'S2_B2_2018-06', 'S2_B3_2018-06', 'S2_B4_2018-06', 'S2_B5_2018-06', 'S2_B6_2018-06', 'S2_B7_2018-06', 'S2_B8_2018-06', 'S2_B8A_2018-06', 'S2_B11_2018-06', 'S2_B12_2018-06', 'S2_B2_2018-07', 'S2_B3_2018-07', 'S2_B4_2018-07', 'S2_B5_2018-07', 'S2_B6_2018-07', 'S2_B7_2018-07', 'S2_B8_2018-07', 'S2_B8A_2018-07', 'S2_B11_2018-07', 'S2_B12_2018-07', 'S2_B2_2018-08', 'S2_B3_2018-08', 'S2_B4_2018-08', 'S2_B5_2018-08', 'S2_B6_2018-08', 'S2_B7_2018-08', 'S2_B8_2018-08', 'S2_B8A_2018-08', 'S2_B11_2018-08', 'S2_B12_2018-08', 'S2_B2_2018-09', 'S2_B3_2018-09', 'S2_B4_2018-09', 'S2_B5_2018-09', 'S2_B6_2018-09', 'S2_B7_2018-09', 'S2_B8_2018-09', 'S2_B8A_2018-09', 'S2_B11_2018-09', 'S2_B12_2018-09', 'S2_B2_2018-10', 'S2_B3_2018-10', 'S2_B4_2018-10', 'S2_B5_2018-10', 'S2_B6_2018-10', 'S2_B7_2018-10', 'S2_B8_2018-10', 'S2_B8A_2018-10', 'S2_B11_2018-10', 'S2_B12_2018-10', 'S2_B2_2018-11', 'S2_B3_2018-11', 'S2_B4_2018-11', 'S2_B5_2018-11', 'S2_B6_2018-11', 'S2_B7_2018-11', 'S2_B8_2018-11', 'S2_B8A_2018-11', 'S2_B11_2018-11', 'S2_B12_2018-11', 'S2_B2_2018-12', 'S2_B3_2018-12', 'S2_B4_2018-12', 'S2_B5_2018-12', 'S2_B6_2018-12', 'S2_B7_2018-12', 'S2_B8_2018-12', 'S2_B8A_2018-12', 'S2_B11_2018-12', 'S2_B12_2018-12', 'elevation', 'slope', 'aspect', 'topographic_diversity']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the data stack\n",
     "stack = create_data_stack_v2(aoi, date_list, s2_params)\n",
@@ -118,28 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2d4db315-1f6a-46d0-9f8a-042900881456",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading training data...\n",
-      "Training data loaded and ready!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load and sample the training data\n",
     "print('Loading training data...')\n",
-    "trainingbands_sample = [trainingbands[i] for i in [1,10,18,19]] # Temporary selection of random bands to allow pipeline testing\n",
+    "#trainingbands_sample = [trainingbands[i] for i in [1,10,18,19]] # Temporary selection of random bands to allow pipeline testing\n",
     "\n",
     "training_points = geemap.shp_to_ee(fp_train_points)\n",
-    "data = stack.select(trainingbands_sample).sampleRegions(collection=training_points,\n",
-    "                                                        properties=[label],\n",
-    "                                                        scale=scale)\n",
+    "data = stack.select(trainingbands).sampleRegions(collection=training_points,\n",
+    "                                                 properties=[label],\n",
+    "                                                 scale=scale)\n",
     "\n",
     "# Remove null value samples (if needed, switch all the 'data' to dataNoNulls' below)\n",
     "#dataNoNulls = data.filter(ee.Filter.notNull(data.first().propertyNames()))\n",
@@ -155,24 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "085674cb-a141-4e57-8b09-996abe80ee97",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting up random forest classifier...\n",
-      "Using random forest to classify region...\n",
-      "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/5a6614c5399b874d2e7bfe721ddff4da-8cb1e25c8f4f74de4769c1e56f056ebe:getPixels\n",
-      "Please wait ...\n",
-      "Data downloaded to D:\\tpfdo\\Documents\\Artio_drive\\Projects\\Polesia\\Classified\\Random_forest.tif\n",
-      "Classification complete!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up the Random Forest\n",
     "print('Setting up random forest classifier...')\n",
@@ -183,13 +110,13 @@
     "              \"maxNodes\":None, # max number of leafs/nodes per tree\n",
     "               \"seed\":0}  # random seed for \"random\" choices like sampling.\n",
     "\n",
-    "clf = ee.Classifier.smileRandomForest(**init_params).train(train, label, trainingbands_sample)\n",
+    "clf = ee.Classifier.smileRandomForest(**init_params).train(train, label, trainingbands)\n",
     "\n",
     "# Carry out the Random Forest\n",
     "print('Using random forest to classify region...')\n",
     "target_area = geemap.shp_to_ee(fp_target_ext)\n",
     "target_stack = stack.clip(target_area)\n",
-    "classified = stack.select(trainingbands_sample).classify(clf)\n",
+    "classified = stack.select(trainingbands).classify(clf)\n",
     "\n",
     "# Export results to local\n",
     "file_out = fp_export_dir+'Random_forest.tif'\n",
@@ -201,19 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a288d87a-683b-4683-86ad-387c77f9126b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating performance reports...\n",
-      "Performance reports completed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate performance reports\n",
     "print('Generating performance reports...')\n",
@@ -234,6 +152,16 @@
     "    writer.writerows(test_accuracy.getInfo())\n",
     "    \n",
     "print('Performance reports completed!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "149eca6f-d653-4b9d-8f31-62540301018c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Training overall accuracy: ', train_accuracy.accuracy())"
    ]
   }
  ],
