added cloud filling for S2

--- a/data_stack_testing/srtm.ipynb
+++ b/data_stack_testing/srtm.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test topographic features\n",
+    "One issue is that normalising aspect is not straight forward (0-360 degrees)\n",
+    "\n",
+    "a suggestion here is to represent as cosine(deg) and sine(deg) - but potentially adding an extra param here is too much of a cost for model complexity\n",
+    "https://stats.stackexchange.com/questions/185091/normalisation-of-circular-statistics-such-as-wind-direction-in-degrees-for-clu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
