--- a/Development_scripts/data_stack_testing/sentinel1.ipynb
+++ b/Development_scripts/data_stack_testing/sentinel1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,6 +604,175 @@
     "                                     f'VH']}\n",
     "\n",
     "Map.addLayer(s1_median, radarVis, 's1_median')\n",
+    "Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test flooding frequency maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_train_ext1 = \"/home/markdj/Dropbox/artio/polesia/val/Vegetation_extent_rough.shp\"\n",
+    "roi_train = geemap.shp_to_ee(fp_train_ext1)\n",
+    "AOI = roi_train\n",
+    "\n",
+    "START_DATE_LIST=['2019-01-01', '2019-02-01', \n",
+    "                 '2019-03-01', '2019-04-01', \n",
+    "                 '2019-05-01', '2019-06-01', \n",
+    "                 '2019-07-01', '2019-08-01',\n",
+    "                 '2019-09-01', '2019-10-01',\n",
+    "                 '2019-11-01', '2019-12-01']\n",
+    "\n",
+    "# START_DATE_LIST=['2018-01-01', '2018-02-01', \n",
+    "#                  '2018-03-01', '2018-04-01', \n",
+    "#                  '2018-05-01', '2018-06-01', \n",
+    "#                  '2018-07-01', '2018-08-01',\n",
+    "#                  '2018-09-01', '2018-10-01',\n",
+    "#                  '2018-11-01', '2018-12-01']\n",
+    "\n",
+    "filters = [ee.Filter.listContains(\"transmitterReceiverPolarisation\", \"VV\"),\n",
+    "           #ee.Filter.listContains(\"transmitterReceiverPolarisation\", \"VH\"),\n",
+    "           ee.Filter.equals(\"instrumentMode\", \"IW\"),\n",
+    "           ee.Filter.geometry(AOI)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-01-01\n",
+      "2017-02-01\n",
+      "2017-03-01\n",
+      "2017-04-01\n",
+      "2017-05-01\n",
+      "2017-06-01\n",
+      "2017-07-01\n",
+      "2017-08-01\n",
+      "2017-09-01\n",
+      "2017-10-01\n",
+      "2017-11-01\n",
+      "2017-12-01\n",
+      "2018-01-01\n",
+      "2018-02-01\n",
+      "2018-03-01\n",
+      "2018-04-01\n",
+      "2018-05-01\n",
+      "2018-06-01\n",
+      "2018-07-01\n",
+      "2018-08-01\n",
+      "2018-09-01\n",
+      "2018-10-01\n",
+      "2018-11-01\n",
+      "2018-12-01\n",
+      "2019-01-01\n",
+      "2019-02-01\n",
+      "2019-03-01\n",
+      "2019-04-01\n",
+      "2019-05-01\n",
+      "2019-06-01\n",
+      "2019-07-01\n",
+      "2019-08-01\n",
+      "2019-09-01\n",
+      "2019-10-01\n",
+      "2019-11-01\n",
+      "2019-12-01\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "START_DATE_LIST=[d.strftime('%Y-%m-%d') for d in pd.date_range(start='2017-01-01', end='2019-12-31', freq='MS')]\n",
+    "SMOOTHING_RADIUS = 100\n",
+    "FLOOD_THRESH = -13\n",
+    "\n",
+    "for i, START_DATE in enumerate(START_DATE_LIST):\n",
+    "    print(START_DATE)\n",
+    "    END_DATE = ee.Date(START_DATE).advance(1, 'month')\n",
+    "    \n",
+    "    #collection\n",
+    "    s1 = ee.ImageCollection('COPERNICUS/S1_GRD') \\\n",
+    "         .filterDate(START_DATE, END_DATE)   \n",
+    "    s1 = s1.filter(filters)\n",
+    "    \n",
+    "    # composites\n",
+    "    s1_median = (s1.select('VV'#, \n",
+    "                           #'VH'\n",
+    "                          )\n",
+    "                  .median()\n",
+    "                  .clip(roi_train.geometry())\n",
+    "                  .rename(f'{START_DATE[0:7]}_VV'#, f'{START_DATE[0:7]}_VH'\n",
+    "                         )\n",
+    "                )\n",
+    "    \n",
+    "    # smooth image to get rid of backscatter noise\n",
+    "    s1_smoothed = s1_median.focal_median(SMOOTHING_RADIUS, 'circle', 'meters')\n",
+    "    # apply a flood masking threshold\n",
+    "    flood = s1_smoothed.lt(FLOOD_THRESH)\n",
+    "\n",
+    "    # stack\n",
+    "    if i == 0:\n",
+    "        median_stack = s1_median\n",
+    "        smooth_stack = s1_smoothed\n",
+    "        flood_stack = flood\n",
+    "        count_stack = flood.rename('VV')\n",
+    "        \n",
+    "    else:\n",
+    "        median_stack = median_stack.addBands(s1_median)\n",
+    "        smooth_stack = smooth_stack.addBands(s1_smoothed) \n",
+    "        flood_stack = flood_stack.addBands(flood)\n",
+    "        count_stack = count_stack.add(flood.rename('VV'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf356c482c4047dc9d3991dee2aaeed5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#visualise \n",
+    "Map = geemap.Map(center=(51.85, 27.8), zoom=9)\n",
+    "#Map.add_basemap('OpenStreetMap.BlackAndWhite')\n",
+    "Map.add_basemap('SATELLITE')\n",
+    "\n",
+    "vis = {'min': -50,'max': 1,'bands': [f'2019-01_VV']}\n",
+    "\n",
+    "Map.addLayer(median_stack, vis, 's1_median')\n",
+    "Map.addLayer(smooth_stack, vis, 's1_smooth')\n",
+    "vis = {'min': 0,'max': 1,'bands': [f'2019-01_VV']}\n",
+    "Map.addLayer(flood_stack, vis, 'flooded')\n",
+    "vis = {'min': 0,'max': 36,'bands': [f'VV']}\n",
+    "Map.addLayer(count_stack, vis, 'flooded_count')\n",
+    "\n",
     "Map"
    ]
   }
